<resources>
    <string name="app_name">NeuroLamp</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="settings_page">Settings Page</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="neurolamp">NeuroLamp</string>
    <string name="lava_lamp_controller">Lava Lamp Controller</string>
    <string name="metamiku">MetaMiku</string>
    <string name="label_version">Version</string>
    <string name="app_version">v1.0.0</string>
    <string name="label_github">GitHub</string>
    <string name="github_url">https://github.com/MetaMikuAI/NeuroLamp</string>
    <string name="searching_for_lamp">Search for lamp...</string>
    <string name="search_subtitle">Found 0 device(s) total</string>
    <string name="found_device_default">Give us a moment to find your lamp</string>
    <string name="cancel">Cancel</string>
    <string name="neuro_searching">Neuro Searching</string>
    <string name="author">Author</string>
    <string name="github">GitHub</string>
    <string name="hardware_solution">Hardware Solution</string>
    <string name="background_image">Background Image</string>
    <string name="lava_lamp_pixel_art">Lava Lamp Pixel Art</string>
    <string name="savanna">萨瓦纳大草原</string>
    <string name="rune_artist">Rune</string>
    <string name="nico_gg">nicoGG</string>
    <string name="marisa_una">Marisa Una</string>
    <string name="rune_pixiv_url">https://www.pixiv.net/users/25170019</string>
    <string name="savanna_bilibili_url">https://space.bilibili.com/34733445</string>
    <string name="marisa_una_bilibili_url">https://space.bilibili.com/11156485</string>
    <string name="rune_neuro_lamp_blurred">rune_neuro_lamp_blurred</string>
    <string name="all_lights">All Lights</string>
    <string name="_0_device_s_connected">0 device(s) connected</string>
    <string name="search">Search</string>
    <string name="ffffffff">#FFFFFFFF</string>
    <string name="alias">alias</string>
    <string name="edit_alias">Edit alias</string>
    <string name="address">Address</string>
    <string name="power">Power</string>
    <string name="specified">Specified</string>
    <string name="random">Random</string>
    <string name="api">API</string>
    <string name="sync">Sync</string>
    <string name="color_format">Color Format</string>
    <string name="argb">ARGB</string>
    <string name="color_format_help">Color format help</string>
    <string name="app_icon">App Icon</string>
    <string name="version">Version</string>
    <string name="color_api_url">Color API URL</string>
</resources>